<resources>
    <string name="app_name">ISport_app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="felhasznalonev">Felhasználónév</string>
    <string name="fullname">Név</string>
    <string name="age">Életkor</string>
    <string name="leiras">Leírás</string>
    <string name="szerkesztes">Szerkesztés</string>
    <string name="kijelentkezes">Kijelentkezés</string>
    <string name="profile_picture">Profilkép</string>
    <string name="enter_name">Add meg a neved</string>
    <string name="enter_age">Add meg a korod</string>
    <string name="enter_description">Add meg a leírást</string>
    <string name="save_changes">Mentés</string>

    <!--Auth Text-->
    <string name="login_success">Sikeres bejelentkezés</string>
    <string name="register_success">Sikeres regisztráció</string>

    <string name="login_error">Hiba történt a bejelentkezés során</string>
    <string name="error_auth_credential">Hibás felhasználónév vagy jelszó</string>
    <string name="error_auth_registration">Már létezik ilyen felhasználó</string>

    <string name="error_email_required">Az email cím megadása kötelező</string>
    <string name="error_email_invalid">Érvénytelen email cím</string>
    <string name="error_email_too_long">A email cím túl hosszú</string>
    <string name="error_email_too_short">A email cím túl rövid</string>

    <string name="error_password_required">A jelszó megadása kötelező</string>
    <string name="error_password_too_long">A jelszó túl hosszú</string>
    <string name="error_password_too_short">A jelszó túl rövid</string>
    <string name="error_password_not_match">A jelszavak nem egyeznek</string>


    <!-- Event Errors -->
    <string name="error_event_title_required">Az esemény címének megadása kötelező</string>
    <string name="error_event_title_too_long">Az esemény címe túl hosszú</string>
    <string name="error_event_title_too_short">Az esemény címe túl rövid</string>

    <string name="error_event_type_required">Sportág kiválasztása kötelező</string>

    <string name="error_event_location_required">A helyszín megadása kötelező</string>
    <string name="error_event_location_too_long">A helyszín túl hosszú</string>
    <string name="error_event_location_too_short">A helyszín túl rövid</string>

    <string name="error_event_date_required">Dátum megadása kötelező</string>
    <string name="error_event_date_invalid">Ezt a dátumot nem lehet választani</string>

    <string name="error_event_participants_required">A létszám megadása kötelező</string>
    <string name="error_event_participants_invalid">Nem megfelelő létszám</string>
    <string name="error_event_participants_size_too_large">A létszám mérete túl nagy</string>
    <string name="error_event_participants_size_too_small">A létszám mérete túl kicsi</string>

    <string name="error_event_description_required">A leírás megadása kötelező</string>
    <string name="error_event_description_too_long">A leírás túl hosszú</string>
    <string name="error_event_description_too_short">A leírás túl rövid</string>

    <string name="success_event_creation">Sikeres esemény létrehozása</string>
    <string name="error_event_prefix">Hiba:</string>
    
    <string name="error_event_not_found">Az esemény nem található</string>"
    <string name="error_already_applied">Már csatlakozott az eseményre</string>
    <string name="error_event_full">Az esemény megtelt</string>
    <string name="error_event_creator_apply">Az saját eseményhez nem lehet csatlakozni</string>

    <string name="successful_apply">Sikeres csatlakozás</string>
    <string name="create_event_success">Sikeres esemény létrehozása</string>
    <string name="default_success_message">Sikeres művelet</string>

    <string name="event_participants">%1$d / %2$d Fő</string>
    <string name="event_fee">Fizetős</string>
    <string name="event_free">Ingyenes</string>

    <!--Profile Text-->
    <string name="successful_update_name">Sikeres névváltás</string>
    <string name="successful_update_description">Leírás modosítva</string>
    <string name="successful_update_age">Sikeres életkor beállítás</string>

    <string name="error_full_name_required">A név megadása kötelező</string>
    <string name="error_full_name_too_long">A név túl hosszú</string>
    <string name="error_full_name_too_short">A név túl rövid</string>

    <string name="error_description_required">A leírás megadása kötelező</string>
    <string name="error_description_too_long">A leírás túl hosszú</string>
    <string name="error_description_too_short">A leírás túl rövid</string>

    <string name="error_age_required">Az életkor megadása kötelező</string>
    <string name="error_age_invalid">Érvénytelen életkor</string>
    <string name="error_age_too_large">Az életkor túl nagy</string>
    <string name="error_age_too_small">Az életkor túl kicsi</string>

    <!--General Text-->
    <string name="error_unknown">Ismeretlen hiba</string>
    <string name="any_option">Minden lehetőség"</string>
    <string name="success_save">Sikeres mentés</string>


</resources>
